# cv-data-storage

./: .gitignore  README.md  docker-compose-mongo.yaml  docker-compose.yaml  example.local.env  pyproject.toml
cv_data_storage/: main.py
cv_data_storage/clients/: mongodb.py
cv_data_storage/config/: __init__.py  settings.py
cv_data_storage/consumers/: candidate_storage.py  candidates_result_consumer.py  schemas.py
